--- a/assets/css/style-min.css
+++ b/assets/css/style-min.css
@@ -4111,8 +4111,8 @@ p {
 :root .v-dark,
 :root .v-dark-head {
     --bg-color:  #010014;
-    --theme-color: #fb00ea;
-    --assistant-color: #21132b;
+    --theme-color: #8b2ff5;
+    --assistant-color: #13443A;
     --font-color: #ddd;
     --heading-color: #fff;
     --border-color: #ffffff1a;
