--- a/assets/css/style-min.css
+++ b/assets/css/style-min.css
@@ -4112,7 +4112,7 @@ p {
 :root .v-dark-head {
     --bg-color:  #010014;
     --theme-color: #8b2ff5;
-    --assistant-color: #13443A;
+    --assistant-color: #001612;
     --font-color: #ddd;
     --heading-color: #fff;
     --border-color: #ffffff1a;
