--- a/assets/css/style-min.css
+++ b/assets/css/style-min.css
@@ -4096,7 +4096,7 @@ p {
 :root .v-light-head {
     --bg-color: #f9f9f9;
     --assistant-color: #efefef;
-    --theme-color: #8706FB;
+    --theme-color: #8b2ff5;
     /* --theme-color: #fb00ea; */
     --theme-color-font: #fff;
     --font-color: #0009;
