--- a/assets/css/style-min.css
+++ b/assets/css/style-min.css
@@ -4169,7 +4169,7 @@ p {
     --overlay-blend-mode: unset;
 }
 :root .dsn-icon-theme-color {
-    --theme-color: #fb00ea;
+    --theme-color: #8b2ff5;
 }
 @media only screen and (min-width: 1400px) {
     :root {
