--- a/assets/css/style-min.css
+++ b/assets/css/style-min.css
@@ -10842,7 +10842,7 @@ body.tax-product_cat #dsn_header {
     }
 }
 .cta-button {
-    color: #fff;
+    color: #caa1ff;
 }
 .cta-button .dsn-btn .title-btn {
     font-size: 18px;
